--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "files": [],
   "references": [
+    { "path": "contracts-core" },
+    { "path": "contracts-periphery" },
     { "path": "frontend" },
-    { "path": "umbra-js" },
-    { "path": "contracts-core" }
+    { "path": "umbra-js" }
   ],
   "exclude": ["node_modules"]
 }
