updated env and makefile

--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -36,4 +36,4 @@ local-node: setup-yarn
 	yarn hardhat node 
 
 deploy:
-	forge create StakeContract --private-key ${PRIVATE_KEY} # --rpc-url 
+	forge create UmbraBatchSend --private-key ${PRIVATE_KEY} # --rpc-url 
