forge install: solmate
v6

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "contracts-periphery/lib/openzeppelin-contracts"]
 	path = contracts-periphery/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "contracts-periphery/lib/solmate"]
+	path = contracts-periphery/lib/solmate
+	url = https://github.com/Rari-capital/solmate
