--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -1,7 +1,6 @@
 # include .env file and export its env vars
 # (-include to ignore error if it does not exist)
 -include .env
-forkBlock = 10465092
 
 all:; clean install test
 # Clean the repo
@@ -9,6 +8,6 @@ clean  :; forge clean
 # Install the Modules
 install :; forge install
 # Test your contract on a forked network
-test   :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock}
+test   :; forge test
 ## Create gas snapshots
-snapshot   :; forge snapshot -f ${ETH_RPC_URL} --fork-block-number ${forkBlock}
+snapshot   :; forge snapshot
