updated README and makefile

--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -1,12 +1,9 @@
-# include .env file and export its env vars
-# (-include to ignore error if it does not exist)
--include .env
-
-all:; clean install test
 # Clean the repo
 clean  :; forge clean
 # Install the Modules
 install :; forge install
+# Compile smart contracts
+build :; forge build
 # Test your contract on a forked network
 test   :; forge test
 ## Create gas snapshots
