--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "core-js": "^3.6.5",
     "ethers": "^5.5.3",
     "quasar": "^1.0.0",
-    "vue-i18n": "v8"
+    "vue-i18n": "8.27.1"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
