--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: contracts-periphery/
     working-directory: contracts-periphery/
     steps:
       - uses: actions/checkout@v2
@@ -25,7 +28,9 @@ jobs:
           forge build --sizes
   tests:
     runs-on: ubuntu-latest
-    working-directory: contracts-periphery/
+    defaults:
+      run:
+        working-directory: contracts-periphery/
     steps:
       - uses: actions/checkout@v2
         with:
