add UmbraBatchSend contract and test (#326)
* added UmbraBatchSend contract and test

* updated foundry.toml

* added makefile

* updated env and makefile

* updated make remove

* addressed makefile comments

* forge install: openzeppelin-contracts

v4.5.0

* forge install: openzeppelin-contracts

v3.3.0

* forge install: openzeppelin-contracts

v4.5.0

* added DSTestPlus in utils

* test file inherits DSTestPlus

* cleanup

* Arithmetic over/underflow testFuzz_BatchSendEth line 58

* fixed over/underflow error with max bal

* removed non-fuzz tests

* cleanup

* toll set from umbra contract

* added expectCall w/ data

* added custom error and event

* added expectEmit

* added snapshot in makefile

* added new testContract for toll>0 wip

* toll changed and tested, batchSend() wip

* updated makefile

* added internal functions

* added checks in BatchSend()

* added SafeERC20

* added testWithToll and WithoutToll

* decreased fuzz uints

* spacing clean up

* added expectRevert tests

* added expectCall to Umbra.sol fns

* added constructor that takes umbra address

* forge install: solmate

v6

* tests working locally

* internal pure method, style, naming, comments

* updated README and makefile

* deployed at the same address as live networks

* gitmodules update

* comments addressed

* minor update

* update

* constructor takes _umrba

* added a comment

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,7 @@
 	url = https://github.com/brockelmore/forge-std
 [submodule "contracts-periphery/lib/openzeppelin-contracts"]
 	path = contracts-periphery/lib/openzeppelin-contracts
-	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+	url = https://github.com/openzeppelin/OpenZeppelin-contracts
+[submodule "contracts-periphery/lib/solmate"]
+	path = contracts-periphery/lib/solmate
+	url = https://github.com/Rari-capital/solmate
