--- a/contracts-periphery/foundry.toml
+++ b/contracts-periphery/foundry.toml
@@ -1,10 +1,5 @@
 [default]
-src = 'src'
-out = 'out'
-libs = ['lib']
-remappings = ['ds-test/=lib/ds-test/src/', '@openzeppelin/=lib/openzeppelin-contracts']
-
+remappings = ['ds-test/=lib/ds-test/src/']
 [ci]
 fuzz_runs = 10000
-fuzz_max_global_rejects=150000
 # See more config options https://github.com/gakonst/foundry/tree/master/config
