--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -2,6 +2,6 @@
 
 forkBlock = 14800081
 
-build :; forge build
+build :; FOUNDRY_PROFILE=hook forge build
 install :; forge install
-Test :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-contract WithdrawData
+Test :; FOUNDRY_PROFILE=hook forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-contract WithdrawData -vv
