Update Makefile Delete .gas-snapshot-0 Import IUmbra.sol in UmbraBatchSend.sol Add IUmbra.sol Add IUmbraHookReceiver.sol Cleanup Gas.t.sol and helper methods Update UmbraBatchSend.t.sol Add DeployUmbraTest.sol

--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -1,5 +1,7 @@
+.PHONY: test
+
 build :; forge build
+clean :; forge clean
 install :; forge install
-Test :; forge test
-testGas :; forge test --match-path test/Gas.t.sol
-snapshot :; forge snapshot
+snapshot :; forge snapshot --match-path test/Gas.t.sol
+test :; forge test
