--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "dev": "quasar dev",
     "build": "quasar build && cp _redirects dist/spa/",
     "clean": "rimraf dist",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "scan-locale": "vue-i18n-extract report --vueFiles './src/**/*.?(js|vue|ts)' --languageFiles './src/i18n/locales/*.?(json|yml|yaml|js)'"
   },
   "dependencies": {
     "@metamask/jazzicon": "^2.0.0",
@@ -42,6 +43,7 @@
     "jest": "^27.5.1",
     "postinstall-postinstall": "^2.1.0",
     "ts-jest": "^27.1.3",
+    "vue-i18n-extract": "^2.0.6",
     "worker-loader": "^3.0.8"
   },
   "browserslist": [
