--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -3,5 +3,5 @@
 build :; forge build
 clean :; forge clean
 install :; forge install
-snapshot :; forge snapshot --match-path test/Gas.t.sol
-test :; forge test
+snapshot :; forge snapshot --match-path test/Gas.sol
+test :; forge test --match-path test/*.t.sol
