--- a/contracts-periphery/foundry.toml
+++ b/contracts-periphery/foundry.toml
@@ -1,6 +1,5 @@
 [default]
-remappings = ['test/=test/']
+verbosity = 3
 [ci]
 fuzz_runs = 10000
-remappings = ['test/=test/']
 # See more config options https://github.com/gakonst/foundry/tree/master/config
