--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -3,5 +3,5 @@
 build :; forge build
 clean :; forge clean
 install :; forge install
-snapshot :; forge snapshot --match-path test/Gas.t.sol
+snapshot :; forge snapshot --match-path test/UmbraBatchSend.gas.t.sol
 test :; forge test
