--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "jest": "^27.5.1",
     "postinstall-postinstall": "^2.1.0",
+    "quasar-app-extension-system-environment-variables": "^2.0.4",
     "ts-jest": "^27.1.3",
     "vue-i18n-extract": "^2.0.6",
     "worker-loader": "^3.0.8"
