--- a/frontend/quasar.extensions.json
+++ b/frontend/quasar.extensions.json
@@ -5,5 +5,6 @@
     "common_root_object": "none",
     "create_env_files": false,
     "add_env_to_gitignore": false
-  }
+  },
+  "system-environment-variables": {}
 }
