update: unstoppable domains resolution library why?: to support new domain names and domains minted on polygon - add @unstoppabledomains/resolution v7.1.4 (in umbra-js/package.json) - modify getResolutionInstance to fit new typings (in umbra-js/src/utils/utils.ts)

--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -23,7 +23,7 @@
   "author": "Matt Solomon <matt@mattsolomon.dev>, Ben DiFrancesco <ben@scopelift.co>",
   "license": "ISC",
   "dependencies": {
-    "@unstoppabledomains/resolution": "3.0.0",
+    "@unstoppabledomains/resolution": "^7.1.4",
     "ethers": "^5.5.3",
     "noble-secp256k1": "^1.2.5"
   },
