Update CI with env var Update Makefile

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
     defaults:
       run:
         working-directory: contracts-periphery/
