Update miscellaneous Remove Uniswap dependencies Remove extra foundry.toml profiled Add Uniswap Fallback interface Rename utils to interfaces Rename files Fix import paths Update CI Update Makefile

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,4 +41,4 @@ jobs:
           version: nightly
 
       - name: Run tests
-        run: FOUNDRY_PROFILE=ci forge test --match-path test/UmbraBatchSend.t.sol
+        run: make test
