--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -13,5 +13,5 @@ build :; forge build
 clean :; forge clean
 install :; $(INSTALL_CMD)
 snapshot :; forge snapshot --match-path test/UmbraBatchSend.gas.t.sol
-test :; forge test --no-match-path test/UniswapWithdrawHook.t.sol && make test-hook
-test-hook :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/UniswapWithdrawHook.t.sol
+test :; forge test --no-match-path test/UniswapWithdrawHook.fork-1.t.sol && make test-hook
+test-hook :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/UniswapWithdrawHook.fork-1.t.sol
