Update test contract Update Makefile

--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -14,4 +14,5 @@ clean :; forge clean
 install :; $(INSTALL_CMD)
 snapshot :; forge snapshot --match-path test/UmbraBatchSend.gas.t.sol
 test :; forge test --no-match-path test/UniswapWithdrawHook.fork-1.t.sol && make test-hook
-test-hook :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/UniswapWithdrawHook.fork-1.t.sol
+test-hook :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/UniswapWithdrawHook.fork-1.t.sol --match-test "testFuzz_HookTest_10Addrs"
+test-hook-50 :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/UniswapWithdrawHook.fork-1.t.sol --match-test "testFuzz_HookTest_50Addrs"
