Update modules Update Makefile Update gas-snapshot Use env var for # addr iterations in hook test Run prettier

--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -13,6 +13,5 @@ build :; forge build
 clean :; forge clean
 install :; $(INSTALL_CMD)
 snapshot :; forge snapshot -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path \*.gas.t.sol
-snapshot-hook :; forge snapshot -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/gas/UniswapWithdrawHook.fork.1.gas.t.sol
 test :; forge test --match-path test/UmbraBatchSend.t.sol && make test-hook
-test-hook :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/UniswapWithdrawHook.fork.1.t.sol
+test-hook :; source ./.env && forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/UniswapWithdrawHook.fork.1.t.sol
