Use state var for address iteration Add comment Update Makefile

--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -14,4 +14,4 @@ clean :; forge clean
 install :; $(INSTALL_CMD)
 snapshot :; forge snapshot -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path \*.gas.t.sol
 test :; forge test --match-path test/UmbraBatchSend.t.sol && make test-hook
-test-hook :; source ./.env && forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/UniswapWithdrawHook.fork.1.t.sol
+test-hook :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path test/UniswapWithdrawHook.fork.1.t.sol
