--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,24 +28,25 @@
     "ethers": "^5.5.3",
     "quasar": "2",
     "vue": "3",
-    "vue-i18n": "8.27.1",
+    "vue-i18n": "9",
     "vue-router": "4",
     "yaml-loader": "0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@babel/eslint-parser": "^7.18.2",
+    "@babel/eslint-parser": "^7.0.0",
     "@intlify/vue-i18n-loader": "^4.2.0",
-    "@quasar/app-webpack": "3",
+    "@quasar/app-webpack": "^3.0.0",
     "@quasar/quasar-app-extension-dotenv": "^1.0.5",
     "@types/jest": "^27.4.1",
-    "@types/node": "^12.17.15",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
-    "eslint": "^8.18.0",
+    "@types/node": "^12.20.21",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^7.14.0",
     "eslint-plugin-vue": "^7.0.0",
     "eslint-webpack-plugin": "^2.4.0",
     "jest": "^27.5.1",
+    "node-polyfill-webpack-plugin": "^2.0.0",
     "postinstall-postinstall": "^2.1.0",
     "quasar-app-extension-system-environment-variables": "^2.0.4",
     "ts-jest": "^27.1.3",
