--- a/contracts-periphery/Makefile
+++ b/contracts-periphery/Makefile
@@ -12,7 +12,7 @@ forkBlock = 14800081
 build :; forge build
 clean :; forge clean
 install :; $(INSTALL_CMD)
-snapshot :; forge snapshot -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path *.gas.t.sol
+snapshot-gas :; forge test -f ${ETH_RPC_URL} --fork-block-number ${forkBlock} --match-path *.gas.t.sol --gas-report > snapshot/.gas
 test :; make test-contracts test-gas
 test-contracts :; make test-batch-send test-uniswap-hook
 test-batch-send :; forge test --match-path test/UmbraBatchSend.t.sol
