--- a/contracts-core/package.json
+++ b/contracts-core/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.2",
   "description": "Contracts for the Umbra Protocol",
   "dependencies": {
-    "@opengsn/gsn": "^2.1.0",
     "@openzeppelin/contracts": "^3.4.1"
   },
   "devDependencies": {
@@ -73,8 +72,7 @@
     "lint:ts": "eslint --ext .js,.ts .",
     "prettier": "prettier --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:list-different": "prettier --list-different \"**/*.{js,json,md,sol,ts}\"",
-    "test": "hardhat test test/*.{js,ts}",
-    "test:gsn": "concurrently --success first --kill-others \"hardhat node &>/dev/null\" \"hardhat test test/gsn/*.js --network localhost\"",
+    "test": "hardhat test",
     "test:gas": "REPORT_GAS=true yarn test",
     "typechain": "hardhat typechain",
     "prepare": "yarn run typechain",
