--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,21 +26,28 @@
     "bnc-onboard": "^1.13.0",
     "core-js": "^3.6.5",
     "ethers": "^5.6.8",
-    "quasar": "^1.0.0",
+    "quasar": "2",
+    "vue": "3",
     "vue-i18n": "8.27.1",
+    "vue-router": "4",
     "yaml-loader": "0.6.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.0.0",
     "@intlify/vue-i18n-loader": "^4.2.0",
-    "@quasar/app": "^2.0.0",
+    "@quasar/app-webpack": "3",
     "@quasar/quasar-app-extension-dotenv": "^1.0.5",
     "@types/jest": "^27.4.1",
     "@types/node": "^12.17.15",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
-    "babel-eslint": "^10.0.1",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-quasar": "^1.0.0",
+    "eslint-plugin-vue": "^7.0.0",
+    "eslint-webpack-plugin": "^2.4.0",
     "jest": "^27.5.1",
     "postinstall-postinstall": "^2.1.0",
     "quasar-app-extension-system-environment-variables": "^2.0.4",
