--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "ethers": "^5.6.8",
     "quasar": "2",
     "vue": "3",
-    "vue-i18n": "8.27.1",
+    "vue-i18n": "^9.2.2",
     "vue-router": "4",
     "yaml-loader": "0.6.0"
   },
