--- a/contracts-periphery/foundry.toml
+++ b/contracts-periphery/foundry.toml
@@ -1,6 +1,9 @@
-[default]
+[profile.default]
 verbosity = 3
 
-[ci]
+[profile.ci]
 fuzz_runs = 10000
 # See more config options https://github.com/gakonst/foundry/tree/master/config
+
+[rpc_endpoints]
+mainnet = "${ETH_RPC_URL}"
