forge install: solmate

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "contracts-periphery/lib/forge-std"]
 	path = contracts-periphery/lib/forge-std
 	url = https://github.com/brockelmore/forge-std
+[submodule "contracts-periphery/lib/solmate"]
+	path = contracts-periphery/lib/solmate
+	url = https://github.com/transmissions11/solmate
