--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,9 @@
     "@umbra/umbra-js": "^0.1.0",
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "@vue/composition-api": "^0.6.4",
+    "@web3-onboard/core": "^2.8.1",
+    "@web3-onboard/injected-wallets": "^2.2.0",
     "bnc-notify": "^1.5.1",
-    "bnc-onboard": "^1.13.0",
     "core-js": "^3.6.5",
     "ethers": "^5.6.8",
     "quasar": "^1.0.0",
