--- a/contracts-periphery/foundry.toml
+++ b/contracts-periphery/foundry.toml
@@ -1,8 +1,10 @@
 [profile.default]
 verbosity = 3
+fs_permissions = [{ access = "read", path = "./"}]
 
 [profile.ci]
 fuzz_runs = 10000
+fs_permissions = [{ access = "read", path = "./"}]
 # See more config options https://github.com/gakonst/foundry/tree/master/config
 
 [rpc_endpoints]
