--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "ethers": "^5.6.8",
     "quasar": "2",
     "vue": "3",
-    "vue-i18n": "^9.2.2",
+    "vue-i18n": "^9.3.0-beta.6",
     "vue-router": "4",
     "yaml-loader": "0.6.0"
   },
