set declaration map

--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -5,7 +5,8 @@
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "files": [
-    "build"
+    "build",
+    "src"
   ],
   "scripts": {
     "test": "yarn build && yarn hardhat test",
