--- a/contracts-periphery/package.json
+++ b/contracts-periphery/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "install": "make install",
     "build": "make build",
-    "test": "make test"
+    "test": "make test",
+    "lint": "forge fmt --check"
   }
 }
