--- a/umbra-js/.nycrc
+++ b/umbra-js/.nycrc
@@ -24,7 +24,8 @@
   "reporter": [
     "html",
     "text",
-    "text-summary"
+    "text-summary",
+    "lcov"
   ],
   "all": true,
   "instrument": true
