--- a/contracts-periphery/package.json
+++ b/contracts-periphery/package.json
@@ -6,6 +6,7 @@
     "install": "make install",
     "build": "make build",
     "test": "make test",
-    "lint": "forge fmt --check"
+    "lint": "forge fmt --check",
+    "coverage": "make coverage"
   }
 }
