ci: third time's a charm

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,7 +76,8 @@ jobs:
         run: |
           sudo apt update && sudo apt install -y lcov
           lcov --add-tracefile ./contracts-periphery/lcov.info --add-tracefile ./umbra-js/coverage/lcov.info  --output-file lcov.info
-          # To ignore coverage for certain directories modify the paths in this step as needed. The
+
+      # To ignore coverage for certain directories modify the paths in this step as needed. The
       # below default ignores coverage results for the test and script directories. Alternatively,
       # to include coverage in all directories, comment out this step.
       - name: Filter directories
@@ -85,7 +86,7 @@ jobs:
       - name: Verify coverage level
         uses: zgosalvez/github-actions-report-lcov@v1
         with:
-          coverage-files: ./contracts-periphery/lcov.info
+          coverage-files: ./lcov.info
           minimum-coverage: 82 # Set coverage threshold.
           github-token: ${{ secrets.GITHUB_TOKEN }} # Adds a coverage summary comment to the PR.
           working-directory: ./contracts-periphery
