--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,9 @@
     "@web3-onboard/walletconnect": "^2.1.3",
     "bnc-notify": "^1.5.1",
     "core-js": "^3.6.5",
+    "ethereum-cryptography": "^1.1.2",
     "ethers": "^5.6.8",
+    "localforage": "^1.10.0",
     "quasar": "^1.0.0",
     "vue-i18n": "8.27.1",
     "yaml-loader": "0.6.0"
