Revert "ci: stricter periphery contract build: fail if solc has warnings"
This reverts commit a912bd632a878ebbdb2fe971bd963b19f459e9c0.

--- a/contracts-periphery/foundry.toml
+++ b/contracts-periphery/foundry.toml
@@ -13,10 +13,10 @@
 [profile.lite]
   fuzz = { runs = 50 }
   invariant = { runs = 10 }
-  optimizer = false         # Speed up compilation and tests during development.
+  # Speed up compilation and tests during development.
+  optimizer = false
 
 [profile.ci]
-  deny_warnings = true        # fails build if there are compiler warnings
   fuzz = { runs = 10000 }
   invariant = { runs = 1000 }
 
