--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@umbra/umbra-js",
+  "name": "@umbracash/umbra-js",
   "version": "0.1.0",
   "description": "Send and receive stealth payments",
   "main": "build/src/index.js",
@@ -17,12 +17,11 @@
     "build": "tsc --build",
     "clean": "rimraf build coverage .nyc_output cache",
     "prepare": "yarn build",
-    "prepublishOnly": "yarn lint && yarn test",
     "precommit": "lint-staged",
     "docs": "typedoc src/"
   },
-  "author": "Matt Solomon <matt@mattsolomon.dev>, Ben DiFrancesco <ben@scopelift.co>",
-  "license": "ISC",
+  "author": "ScopeLift <support@umbra.cash>",
+  "license": "MIT",
   "dependencies": {
     "@unstoppabledomains/resolution": "8.3.1",
     "ethers": "^5.6.8",
