--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@ledgerhq/devices": "^7.0.5",
     "@metamask/jazzicon": "^2.0.0",
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.15.8",
     "@umbra/umbra-js": "^0.1.0",
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "@unstoppabledomains/resolution": "8.3.1",
@@ -32,27 +32,27 @@
     "bnc-notify": "^1.5.1",
     "core-js": "^3.6.5",
     "ethers": "^5.6.8",
-    "quasar": "2.10.0",
-    "vue": "3.2.41",
-    "vue-i18n": "^9.3.0-beta.6",
-    "vue-router": "4.1.5",
+    "quasar": "2.10.2",
+    "vue": "3.2.45",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "4.1.6",
     "yaml-loader": "0.6.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@intlify/vue-i18n-loader": "^4.2.0",
-    "@quasar/app-webpack": "3",
+    "@quasar/app-webpack": "3.6.2",
     "@quasar/quasar-app-extension-dotenv": "^1.0.5",
     "@types/jest": "^27.4.1",
-    "@types/node": "^12.17.15",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
+    "@types/node": "^18.11.15",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^6.1.0",
     "eslint-plugin-quasar": "^1.0.0",
-    "eslint-plugin-vue": "^9.6.0",
+    "eslint-plugin-vue": "^9.8.0",
     "eslint-webpack-plugin": "^3.2.0",
     "jest": "^27.5.1",
     "node-polyfill-webpack-plugin": "^2.0.1",
