--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "@web3-onboard/walletconnect": "^2.2.2",
     "bnc-notify": "^1.5.1",
     "core-js": "^3.6.5",
-    "ethers": "^5.6.8",
+    "ethers": "5.6.9",
     "quasar": "2.10.2",
     "vue": "3.2.45",
     "vue-i18n": "^9.2.2",
