--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -24,7 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@unstoppabledomains/resolution": "8.3.1",
-    "ethers": "^5.6.8",
+    "ethers": "5.6.9",
     "noble-secp256k1": "^1.2.5"
   },
   "devDependencies": {
