--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,32 +78,38 @@ jobs:
       - name: Merge directories
         run: |
           sudo apt update && sudo apt install -y lcov
-          lcov --add-tracefile ./contracts-periphery/lcov.info --add-tracefile ./umbra-js/coverage/lcov.info  --output-file lcov.info --rc lcov_branch_coverage=1
+          lcov \
+            --add-tracefile ./contracts-periphery/lcov.info \
+            --add-tracefile ./umbra-js/coverage/lcov.info  \
+            --output-file lcov.info \
+            --rc lcov_branch_coverage=1
 
-      # To ignore coverage for certain directories modify the paths in this step as needed. The
-      # below default ignores coverage results for the test and script directories. Alternatively,
-      # to include coverage in all directories, comment out this step.
+      # To ignore coverage for certain directories modify the paths in this step as needed.
+      # Alternatively, to include coverage in all directories, comment out this step.
       - name: Filter directories
         run: |
-          lcov --remove ./lcov.info 'contracts-periphery/test/*' 'contracts-periphery/script/*'
+          lcov --remove ./lcov.info 'contracts-periphery/test/*' 'contracts-periphery/script/*' \
+            --output-file lcov.info \
+            --rc lcov_branch_coverage=1
 
-      # This action is used to fail coverage if the specified coverage threshold is not met.
-      # Although this action can post a comment (when it's `github-token` is specified) the below
-      # step posts a much more useful comment. That below action does not fail CI if a minimum
-      # coverage threshold is not met, which is why we use both in this way.
-      - name: Verify minimum coverage
-        uses: zgosalvez/github-actions-report-lcov@v2
-        with:
-          coverage-files: ./lcov.info
-          minimum-coverage: 70 # Set coverage threshold.
-
+      # This step posts a detailed coverage report as a comment and deletes previous comments on
+      # each push. The below step is used to fail coverage if the specified coverage threshold is
+      # not met. The below step can post a comment (when it's `github-token` is specified) but it's
+      # not as useful, and this action cannot fail CI based on a minimum coverage threshold, which
+      # is why we use both in this way.
       - name: Post coverage report
-        if: always()
+        if: github.event_name == 'pull_request' # This action fails when ran outside of a pull request.
         uses: romeovs/lcov-reporter-action@v0.3.1
         with:
           delete-old-comments: true
           lcov-file: ./lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }} # Adds a coverage summary comment to the PR.
+
+      - name: Verify minimum coverage
+        uses: zgosalvez/github-actions-report-lcov@v2
+        with:
+          coverage-files: ./lcov.info
+          minimum-coverage: 70 # Set coverage threshold.
 
   lint:
     runs-on: ubuntu-latest
