--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,6 +8,8 @@
     "outDir": "build",
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "module": "es2020",
+    "moduleResolution": "node",
     "paths": {
       "src/*": ["src/*"],
       "app/*": ["*"],
