--- a/contracts-periphery/package.json
+++ b/contracts-periphery/package.json
@@ -10,12 +10,6 @@
     "build": "make build && yarn run typechain --target ethers-v5 --out-dir ./typechain './out/UmbraBatchSend.sol/UmbraBatchSend.json'",
     "test": "make test",
     "lint": "forge fmt --check",
-    "coverage": "make coverage",
-    "prepare": "yarn run typechain --target ethers-v5 --out-dir ./typechain './out/UmbraBatchSend.sol/UmbraBatchSend.json'"
-  },
-  "devDependencies": {
-    "@typechain/ethers-v5": "^10.1.0",
-    "typechain": "^8.1.0",
-    "typescript": "4.5.2"
+    "coverage": "make coverage"
   }
 }
