Remove typechain command

--- a/contracts-periphery/package.json
+++ b/contracts-periphery/package.json
@@ -2,12 +2,9 @@
   "name": "@umbra/contracts-periphery",
   "version": "0.0.1",
   "license": "MIT",
-  "files": [
-    "typechain"
-  ],
   "scripts": {
     "install": "make install",
-    "build": "make build && yarn run typechain --target ethers-v5 --out-dir ./typechain './out/UmbraBatchSend.sol/UmbraBatchSend.json'",
+    "build": "make build",
     "test": "make test",
     "lint": "forge fmt --check",
     "coverage": "make coverage"
