--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umbra/frontend",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Send and receive stealth payments with the Umbra protocol",
   "productName": "Umbra",
   "author": "Matt Solomon <matt@mattsolomon.dev>",
@@ -17,43 +17,49 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "@ledgerhq/devices": "^7.0.0",
+    "@ledgerhq/devices": "^7.0.5",
     "@metamask/jazzicon": "^2.0.0",
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.15.8",
     "@umbra/umbra-js": "^0.1.0",
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "@unstoppabledomains/resolution": "8.3.1",
-    "@vue/composition-api": "^0.6.4",
-    "@web3-onboard/coinbase": "^2.1.3",
-    "@web3-onboard/core": "^2.9.0",
-    "@web3-onboard/injected-wallets": "^2.2.4",
-    "@web3-onboard/ledger": "^2.3.1",
-    "@web3-onboard/trezor": "^2.3.1",
-    "@web3-onboard/walletconnect": "^2.1.3",
+    "@web3-onboard/coinbase": "^2.2.0",
+    "@web3-onboard/core": "^2.11.1",
+    "@web3-onboard/injected-wallets": "^2.4.0",
+    "@web3-onboard/ledger": "^2.3.2",
+    "@web3-onboard/trezor": "^2.3.2",
+    "@web3-onboard/walletconnect": "^2.2.2",
     "bnc-notify": "^1.5.1",
     "core-js": "^3.6.5",
-    "ethers": "^5.6.8",
-    "quasar": "^1.0.0",
-    "vue-i18n": "8.27.1",
+    "ethers": "5.6.9",
+    "quasar": "2.10.2",
+    "vue": "3.2.45",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "4.1.6",
     "yaml-loader": "0.6.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@intlify/vue-i18n-loader": "^4.2.0",
-    "@quasar/app": "^2.0.0",
+    "@quasar/app-webpack": "3.6.2",
     "@quasar/quasar-app-extension-dotenv": "^1.0.5",
     "@types/jest": "^27.4.1",
-    "@types/node": "^12.17.15",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
-    "babel-eslint": "^10.0.1",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.1.2",
+    "@types/node": "^14.11.8",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^6.1.0",
+    "eslint-plugin-quasar": "^1.0.0",
+    "eslint-plugin-vue": "^9.8.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "jest": "^27.5.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "postinstall-postinstall": "^2.1.0",
     "quasar-app-extension-system-environment-variables": "^2.0.4",
     "ts-jest": "^27.1.3",
-    "vue-i18n-extract": "^2.0.6",
-    "worker-loader": "^3.0.8"
+    "vue-i18n-extract": "^2.0.7"
   },
   "browserslist": [
     "last 10 Chrome versions",
