--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -35,6 +35,7 @@
     "@types/chai": "^4.2.16",
     "@types/mocha": "^8.2.2",
     "@umbra/contracts-core": "^0.0.2",
+    "@umbra/contracts-periphery": "^0.0.1",
     "chai": "^4.3.4",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^8.2.0",
