--- a/contracts-periphery/package.json
+++ b/contracts-periphery/package.json
@@ -8,6 +8,6 @@
     "test": "make test",
     "lint": "forge fmt --check",
     "coverage": "make coverage",
-    "prepare": "make build"
+    "prepare": "make install && make build"
   }
 }
