--- a/contracts-periphery/package.json
+++ b/contracts-periphery/package.json
@@ -7,7 +7,6 @@
     "build": "make build",
     "test": "make test",
     "lint": "forge fmt --check",
-    "coverage": "make coverage",
-    "prepare": "make install && make build"
+    "coverage": "make coverage"
   }
 }
