--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -24,9 +24,9 @@
   "author": "ScopeLift <support@umbra.cash>",
   "license": "MIT",
   "dependencies": {
+    "@noble/secp256k1": "^1.7.1",
     "@unstoppabledomains/resolution": "8.3.1",
-    "ethers": "5.6.9",
-    "noble-secp256k1": "^1.2.5"
+    "ethers": "5.6.9"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
