--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "module": "es2020",
+    "target": "es2020",
     "moduleResolution": "node",
     "paths": {
       "src/*": ["src/*"],
