--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,5 +8,7 @@ BLOCKNATIVE_API_KEY=yourKeyHere
 FORTMATIC_API_KEY=yourKeyHere
 PORTIS_API_KEY=yourKeyHere
 
+MAINNET_RPC_URL=yourRpcUrlHere
+
 LOG_LEVEL=DEBUG
 MAINTENANCE_MODE_SEND=0
