--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@ensdomains/ensjs": "^3.0.0-alpha.57",
     "@ledgerhq/devices": "^7.0.5",
     "@metamask/jazzicon": "^2.0.0",
     "@quasar/extras": "^1.15.8",
@@ -33,9 +34,9 @@
     "core-js": "^3.6.5",
     "ethers": "5.6.9",
     "quasar": "2.10.2",
+    "vue": "3.2.45",
     "vue-i18n": "^9.2.2",
     "vue-router": "4.1.6",
-    "vue": "3.2.45",
     "yaml-loader": "0.6.0"
   },
   "devDependencies": {
